--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -55,12 +55,12 @@ For example, a study found that the intensity of a stimulus or situation plays a
 Higher intensity of the (negative) stimulus lead to a choice of rather disengaging strategies <!-- oder 'of tactics of attentional deployment'?-->, like distraction [@Sheppes2011;@Sheppes2014].
 ER choice was further influenced by, among others, extrinsic motivation (e.g., monetary incentives), motivational determinants (i.e., hedonic regulatory goals), and effort [@Sheppes2014;@Scheffel2021].
 With regard to effort, we could show in our previous work that the choice for an ER strategy is mainly influenced by the effort required to implement a given strategy [@Scheffel2021].
-In this study, participants used the strategies distancing and suppression while inspecting emotional pictures.
+In our study, participants used the strategies distancing and suppression while inspecting emotional pictures.
 Afterwards, they choose which strategy they wanted to use again.
 Participants tended to re-apply the strategy that was subjectively less effortful, even though it was subjectively not the most effective one - in this case: suppression.
 Interestingly, the choice was independent of self-reported habitual use of suppression and reappraisal.
-What has been missing in research on ER choice so far is information regarding the strategy *not* chosen.
-People choose a strategy that they prefer for different, relatively well-known reasons. 
+What has been missing in research on ER choice so far is information regarding the strategy *not* chosen.<!-- Denise: und fehlen nicht auch noch mehr Studien, die speziell effort im Blick haben? -->
+People choose a strategy that they prefer for different, relatively well-known reasons. <!-- Denise: Ist das so? Na gut, es gibt schon einiges an Choice und Goals, aber zu Effort als reason? Ich bin nicht ganz überzeugt davon, dass die Argumentation sich ab hier vor allem auf die nicht gewählte Strategie fokussiert. Kann man nicht auch sagen, dass es noch zu wenig zu effort gibt, das Scheffel2021 eine der ersten war, die mehrere Strategien hinsichtlich effort mit subjektiven, physiologischen und Verhaltensmaßen untersucht hat, dass sich nun die Frage stellt, was genau der subjektive Effort macht, nämlich den Subjective Value beeinflussen, dass dies eben auch für die gewählte Strategie oder im Vergleich mehrerer Taktiken noch nicht untersucht wurde. Und das ihr deshalb nun so vorgeht? -->
 However, nothing is revealed about the strategy that is *not chosen*.
 
 We assume that people choose the strategy that has the highest value for them at the moment.
@@ -68,12 +68,13 @@ The value is determined against the background of goal achievement in the specif
 One certainly central goal is the regulation of negative affect.
 A second, intrinsic and less obvious goal is the avoidance of effort [@Inzlicht2018].
 When given the choice, most individuals prefer tasks that are less effortful [@Hull1943].
-We assume that both aspects are traded off against each other by individuals to determine individual subjective values (SVs) of ER strategies: A strategy is more valuable if it can reduce emotional arousal *and* is less effortful.
-SVs of ER Strategies could be helpful to describe the ER repertoire [@Aldao2015] more comprehensively.
+We assume that both aspects are traded off against each other by individuals to determine individual subjective values (SVs) of ER strategies: A strategy is more valuable if it can reduce emotional arousal *and* is less effortful. <!-- Genau, die Argumentation ist super, nur braucht ihr dafür oben den Hinweis auf die nicht gewählte Strategie?-->
+SVs of ER Strategies could therefore be helpful to describe the ER repertoire [@Aldao2015] more comprehensively.
 Depending on the flexibility of a person, different patterns of SVs could be conceivable: A person with high flexibility would show relatively high SVs for a number of strategies.
 This would mean that all strategies are a good option for goal achievement.
-A second person with less flexibilty, however, would show high SVs only for one strategy, or for no strategy at all.
-This in turn would mean that no strategy is a good choice to achieve ER goals.
+A second person with less flexibility, however, would show high SVs only for one or very few strategies.
+This in turn would mean that there is only a limited amount of strategies in the repertoire to choose from. 
+Subsequently, the ability to choose an appropriate strategy for a specific situation is also limited.
 
 However, so far we have not seen any attempt in ER choice research to determine individual SVs of ER strategies.
 To investigate this question, the individual SVs of each strategy available for selection would have to be determined.
