added reference bonanno

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -89,6 +89,21 @@ https://link.springer.com/content/pdf/10.1007%2Fs10608-014-9662-4.pdf},
    year = {1994},
 }
 
+@article{Bonanno2013,
+   author = {Bonanno, G. A. and Burton, C. L.},
+   title = {Regulatory Flexibility: An Individual Differences Perspective on Coping and Emotion Regulation},
+   journal = {Perspectives on Psychological Science},
+   volume = {8},
+   number = {9},
+   pages = {591-612},
+   ISSN = {1745-6924 (Electronic)
+1745-6916 (Linking)},
+   DOI = {10.1177/1745691613504116},
+   url = {https://journals.sagepub.com/doi/pdf/10.1177/1745691613504116},
+   year = {2013}
+}
+
+
 @article{Braehler2007,
   title = {Teststatistische pr{\"u}fung und normierung der deutschen versionen des EUROHIS-QOL lebensqualit{\"a}t-Index und des WHO-5 wohlbefindens-index},
   author = {Br{\"a}hler, Elmar and M{\"u}hlan, Holger and Albani, Cornelia and Schmidt, Silke},
