--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -39,8 +39,7 @@ For example, it was shown that maladaptive ER strategies mediate the effect betw
 The postulation of *adaptive* and *maladaptive* ER strategies has been challenged by the concepts of ER repertoire and ER flexibility.
 Within this framework, *maladaptive*  refers to inflexible ER strategy use or use of strategies that are hindering goal achievement [@Aldao2015] <!--Tamir, M. (2016). Why do people regulate their emotions? A taxonomy of motives in emotion regulation. Personality and Social Psychology Review, 20(3), 199-222. doi:10.1177/1088868315586325 ;  Tamir, M., Bigman, Y. E., Rhodes, E., Salerno, J., & Schreier, J. (2015). An expectancy-value model of emotion regulation: Implications for motivation, emotional experience, and decision making. Emotion, 15(1), 90-103. doi:10.1037/emo0000021  Könnte vor allem das 2. Paper noch hilfreich sein um mehr auf die Values hinzuargumentieren? Ist schon länger her, als ich das gelesen hab. Aber evtl. lohnt es sich, Tamir sagt hier, dass reguliert wird, wenn Personen annehmen, dass die Emotion die sie erzielen möchten, useful ist, also einen Wert hat. Das ist schon anders als die subjective Values, die ihr den ER Strategien zuschreiben möchtet, aber zeigt ja, dass die Analyse von Values im Rahmen von ER als Decision Making schon untersucht wurde, nur eben nicht direkt Values den Strategien zugeschrieben wurde-->.
 Adaptive flexible ER requires a large repertoire of ER strategies [@Aldao2015].
-The term “repertoire” can be defined as the ability to utilize a wide range of regulatory strategies in divergent contextual demands and opportunities (Bonanno & Burton, 2013 p.594).
-<!-- Bonanno, G. A., & Burton, C. L. (2013). Regulatory flexibility: An individual differences perspective on coping and emotion regulation. Perspect Psychol Sci, 8(6), 591-612. doi:10.1177/1745691613504116 -->
+The term “repertoire” can be defined as the ability to utilize a wide range of regulatory strategies in divergent contextual demands and opportunities [@Bonanno2013].
 A growing number of studies report findings about the repertoire of emotion regulation strategies and its relationship to psychopathology (Dixon-Gordon, Aldao, & De Los Reyes, 2015; Lougheed & Hollenstein, 2012; Southward, Altenburger, Moss, Cregg, & Cheavens, 2018). 
 <!-- Dixon-Gordon, K. L., Aldao, A., & De Los Reyes, A. (2015). Repertoires of emotion regulation: A person-centered approach to assessing emotion regulation strategies and links to psychopathology. Cogn Emot, 29(7), 1314-1325. doi:10.1080/02699931.2014.983046
 Lougheed, J. P., & Hollenstein, T. (2012). A limited repertoire of emotion regulation strategies is associated with internalizing problems in adolescence. Social Development, 21(4), 704-721. doi:10.1111/j.1467-9507.2012.00663.x
