--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -181,6 +181,20 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   publisher = {American Psychological Association}
 }
 
+@article{DixonGordon2015,
+   author = {Dixon-Gordon, K. L. and Aldao, A. and De Los Reyes, A.},
+   title = {Repertoires of emotion regulation: A person-centered approach to assessing emotion regulation strategies and links to psychopathology},
+   journal = {Cogn Emot},
+   volume = {29},
+   number = {7},
+   pages = {1314-25},
+   ISSN = {1464-0600 (Electronic)
+0269-9931 (Linking)},
+   DOI = {10.1080/02699931.2014.983046},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/25435338},
+   year = {2015}
+}
+
 @article{Doerfel2019,
    author = {Dörfel, D. and Gärtner, A. and Strobel, A.},
    title = {A new self-report instrument for measuring emotion regulation flexibility.},
@@ -472,6 +486,19 @@ https://www.nature.com/articles/nn2007.pdf},
   url    = {https://CRAN.R-project.org/package=BayesFactor},
 }
 
+@article{Lougheed2012,
+   author = {Lougheed, J. P. and Hollenstein, T.},
+   title = {A Limited Repertoire of Emotion Regulation Strategies is Associated with Internalizing Problems in Adolescence},
+   journal = {Social Development},
+   volume = {21},
+   number = {4},
+   pages = {704-721},
+   ISSN = {0961-205x},
+   DOI = {10.1111/j.1467-9507.2012.00663.x},
+   url = {<Go to ISI>://WOS:000309746100004},
+   year = {2012}
+}
+
 @article{Paschke2016,
    author = {Paschke, L. M. and Dorfel, D. and Steimke, R. and Trempler, I. and Magrabi, A. and Ludwig, V. U. and Schubert, T. and Stelzel, C. and Walter, H.},
    title = {Individual differences in self-reported self-control predict successful emotion regulation},
@@ -644,6 +671,22 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6326885/pdf/nihms-1515865.pdf},
   year   = {2021},
   url    = {https://CRAN.R-project.org/package=afex},
 }
+
+@article{Southward2018,
+   author = {Southward, M. W. and Altenburger, E. M. and Moss, S. A. and Cregg, D. R. and Cheavens, J. S.},
+   title = {Flexible, yet Firm: A Model of Healthy Emotion Regulation},
+   journal = {Journal of Social and Clinical Psychology},
+   volume = {37},
+   number = {4},
+   pages = {231-251},
+   ISSN = {0736-7236},
+   DOI = {DOI 10.1521/jscp.2018.37.4.231},
+   url = {<Go to ISI>://WOS:000433974500001
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6191057/pdf/nihms956496.pdf},
+   year = {2018}
+}
+
+
 
 @article{Sproesser2011,
    author = {Sproesser, G. and Strohbach, S. and Schupp, H. and Renner, B.},
