--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -40,10 +40,7 @@ The postulation of *adaptive* and *maladaptive* ER strategies has been challenge
 Within this framework, *maladaptive*  refers to inflexible ER strategy use or use of strategies that are hindering goal achievement [@Aldao2015] <!--Tamir, M. (2016). Why do people regulate their emotions? A taxonomy of motives in emotion regulation. Personality and Social Psychology Review, 20(3), 199-222. doi:10.1177/1088868315586325 ;  Tamir, M., Bigman, Y. E., Rhodes, E., Salerno, J., & Schreier, J. (2015). An expectancy-value model of emotion regulation: Implications for motivation, emotional experience, and decision making. Emotion, 15(1), 90-103. doi:10.1037/emo0000021  Könnte vor allem das 2. Paper noch hilfreich sein um mehr auf die Values hinzuargumentieren? Ist schon länger her, als ich das gelesen hab. Aber evtl. lohnt es sich, Tamir sagt hier, dass reguliert wird, wenn Personen annehmen, dass die Emotion die sie erzielen möchten, useful ist, also einen Wert hat. Das ist schon anders als die subjective Values, die ihr den ER Strategien zuschreiben möchtet, aber zeigt ja, dass die Analyse von Values im Rahmen von ER als Decision Making schon untersucht wurde, nur eben nicht direkt Values den Strategien zugeschrieben wurde-->.
 Adaptive flexible ER requires a large repertoire of ER strategies [@Aldao2015].
 The term “repertoire” can be defined as the ability to utilize a wide range of regulatory strategies in divergent contextual demands and opportunities [@Bonanno2013].
-A growing number of studies report findings about the repertoire of emotion regulation strategies and its relationship to psychopathology (Dixon-Gordon, Aldao, & De Los Reyes, 2015; Lougheed & Hollenstein, 2012; Southward, Altenburger, Moss, Cregg, & Cheavens, 2018). 
-<!-- Dixon-Gordon, K. L., Aldao, A., & De Los Reyes, A. (2015). Repertoires of emotion regulation: A person-centered approach to assessing emotion regulation strategies and links to psychopathology. Cogn Emot, 29(7), 1314-1325. doi:10.1080/02699931.2014.983046
-Lougheed, J. P., & Hollenstein, T. (2012). A limited repertoire of emotion regulation strategies is associated with internalizing problems in adolescence. Social Development, 21(4), 704-721. doi:10.1111/j.1467-9507.2012.00663.x
-Southward, M. W., Altenburger, E. M., Moss, S. A., Cregg, D. R., & Cheavens, J. S. (2018). Flexible, yet firm: A model of healthy emotion regulation. Journal of Social and Clinical Psychology, 37(4), 231-251. doi:10.1521/jscp.2018.37.4.231-->
+A growing number of studies report findings about the repertoire of emotion regulation strategies and its relationship to psychopathology [@DixonGordon2015;@Lougheed2012;@Southward2018]. 
 Additionally, greater ER flexibility is related to reduced negative affect and therefore beneficial in daily life [@Blanke2020].
 
 How do people choose strategies from their repertoire? 
@@ -51,7 +48,7 @@ Similarly to the expectancy-value model of emotion regulation <!-- Tamir et al, 
 Evidence from other psychological domains (e.g., intertemporal choice, [@Kable2007]) shows that subjective values (SVs) are attributed to the choice options on the basis of which the decision is made. <!-- Der letzte Teil des Satzes klingt komisch, weiß aber nicht so richtig, was ihr sagen wollt.-->
 Research on ER choice has identified numerous factors that influence the choice of ER strategies, which can be seen as indirect evidence for factors influencing SVs. 
 For example, a study found that the intensity of a stimulus or situation plays a role in the choice [@Sheppes2011]. 
-Higher intensity of the (negative) stimulus lead to a choice of rather disengaging strategies <!-- oder 'of tactics of attentional deployment'?-->, like distraction [@Sheppes2011;@Sheppes2014].
+Higher intensity of the (negative) stimulus lead to a choice of rather disengaging tactics of attentional deployment, like distraction [@Sheppes2011;@Sheppes2014].
 ER choice was further influenced by, among others, extrinsic motivation (e.g., monetary incentives), motivational determinants (i.e., hedonic regulatory goals), and effort [@Sheppes2014;@Scheffel2021].
 With regard to effort, we could show in our previous work that the choice for an ER strategy is mainly influenced by the effort required to implement a given strategy [@Scheffel2021].
 In our study, participants used the strategies distancing and suppression while inspecting emotional pictures.
