--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -686,8 +686,6 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6191057/pdf/nihms956496.pdf},
    year = {2018}
 }
 
-
-
 @article{Sproesser2011,
    author = {Sproesser, G. and Strohbach, S. and Schupp, H. and Renner, B.},
    title = {Candy or apple? How self-control resources and motives impact dietary healthiness in women},
@@ -699,6 +697,20 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6191057/pdf/nihms956496.pdf},
    DOI = {10.1016/j.appet.2011.01.028},
    url = {<Go to ISI>://WOS:000291912700035},
    year = {2011},
+}
+
+@article{Tamir2015,
+   author = {Tamir, M. and Bigman, Y. E. and Rhodes, E. and Salerno, J. and Schreier, J.},
+   title = {An expectancy-value model of emotion regulation: implications for motivation, emotional experience, and decision making},
+   journal = {Emotion},
+   volume = {15},
+   number = {1},
+   pages = {90-103},
+   ISSN = {1931-1516 (Electronic)
+1528-3542 (Linking)},
+   DOI = {10.1037/emo0000021},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/25198783},
+   year = {2015}
 }
 
 @article{Tangney2004,
