--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -27,14 +27,18 @@ This postulated temporal sequence of ER strategies influences their effectivenes
 Albeit it is meta-analytically proven that all mentioned strategies reduce subjective emotional experience, distraction as a tactic of attentional deployment and (expressive) suppression as a tactic of response modulation showed only small to medium effect sizes (distraction: _d~+~_ = 0.27; suppression: _d~+~_ = 0.27).
 In contrast, distancing as tactic of cognitive change showed the highest effectiveness with an effect size of _d~+~_ = 0.45 [@Webb2012].
 
-Moreover, it is known that ER strategies <!-- all these strategies?--> reduce physiological responses of emotions, especially emotional valence as measured via facial electromyography (EMG)[@Zaehringer2020] .
+Moreover, it is known that ER strategies <!-- all these strategies?--> reduce physiological responses of emotions, especially emotional valence as measured via facial electromyography (EMG)[@Zaehringer2020].
+In particular, for Corrugator has been shwon...
+However, related to eklige Bilder as negative IAPS are mostly be... Levator
+(nur short term Effekte berichten wg. Überleitung)
 <!-- hier ist noch der Bezug zum Arousal drin gewesen, habe ich angepasst. Corrugator habe ich raus genommen, weil auch Levator untersucht wird (müssten sonst m.E. beide genannt werden.) Generell fehlt noch etwas die Einbettung, warum die beiden ausgewählt wurden. Soll ich da noch etwas ergänzen? bei Zaehringer wird der Levator überhaupt nicht genannt, die Metaanalyse bezieht sich nur auf den Corrugator. Wir hatten damals gesagt, dass viele der negativen Bilder primär auch recht eklig sind und daher der Levator passender sein könnte, weil er speuzifisch auf Ekel zu reagieren scheint, der Corrugator hingegen auf negative Bilder im Allgemeinen. Prinzipiell haben wir aber für beide die gleichen Hypothesen. Können aber auch warten, was die Reviewer sagen.--> 
 <!-- Denise: Ja das ist noch ein schwächerer Punkt in der Intro. Ich habe auch nur Paper gefunden, die EMG corrugator und levator für negative valence berichten, levator eher für Ekel, aber das muss hier kommen. Ein Satz für EMG reicht nicht aus. Wenn ihr weder auf Valence noch auf Arousal (so wie ich bei den Hypothesen noch vorgeschlagen hatte) hier gehen möchtet, dann könnte man das Konstrukt ja muscle activation o.ä. nennen und dies dann im Methodenteil über EMG corrugator und levator operationalisieren. Ich denke aber, dass die getrennte Analyse der beiden Muskelgruppen nivht gerechtfertig ist, da ihr ja keine getrennten Effekte annehmt, sondern der levator eventuel noch sinnvoll ist, da wir viele Ekelbilder haben. Habt ihr schonmal überlegt einen index über beide Aktivierungen zu bilden und dann darüber die Muskelaktivierung zu operationalisieren? Würde die Hypothesen und auch die Interpretation einfacher machen. Falls das nichts bringt, kann man explorativ immer noch die beiden EMGs getrennt analysieren und dies dann so berichten. -->
+
 Similarly to the differences in short term effectiveness, these tactics from three different strategies are also related to different medium and long-term consequences. 
 In particular, strategies that do not change the emotional content of the situation, for instance by taking a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
 Thus, the self-reported habitual use of suppression is associated with more negative affect and lower general well-being [@GrossJohn2003]. 
-In addition, a number of ER strategies have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]), which led to the postulation of *adaptive* and *maladaptive* ER strategies.
-For example, it was shown that maladaptive ER strategies mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
+In addition, a number of ER strategies <!-- Anne: welche? siehe auch nöchster Kommentar, an irgendeiner Stelle würde ich ein zwei Beispiele nennen.--> have been associated with mental disorders (for meta-analytic review, see Aldao et al. [@Aldao2010]), which led to the postulation of *adaptive* (such as reappraisal, acceptance) and *maladaptive* (such as suppression, rumination) ER strategies.
+For example, it was shown that maladaptive ER strategies <!-- Anne: hier würde ich die konkrete Strategie(n) in Klammer nennen--> mediate the effect between neuroticism and depressive symptoms [@Yoon2013].
 
 The postulation of *adaptive* and *maladaptive* ER strategies has been challenged by the concepts of ER repertoire and ER flexibility.
 Within this framework, *maladaptive*  refers to inflexible ER strategy use or use of strategies that are hindering goal achievement [@Aldao2015] <!--Tamir, M. (2016). Why do people regulate their emotions? A taxonomy of motives in emotion regulation. Personality and Social Psychology Review, 20(3), 199-222. doi:10.1177/1088868315586325 ;  Tamir, M., Bigman, Y. E., Rhodes, E., Salerno, J., & Schreier, J. (2015). An expectancy-value model of emotion regulation: Implications for motivation, emotional experience, and decision making. Emotion, 15(1), 90-103. doi:10.1037/emo0000021  Könnte vor allem das 2. Paper noch hilfreich sein um mehr auf die Values hinzuargumentieren? Ist schon länger her, als ich das gelesen hab. Aber evtl. lohnt es sich, Tamir sagt hier, dass reguliert wird, wenn Personen annehmen, dass die Emotion die sie erzielen möchten, useful ist, also einen Wert hat. Das ist schon anders als die subjective Values, die ihr den ER Strategien zuschreiben möchtet, aber zeigt ja, dass die Analyse von Values im Rahmen von ER als Decision Making schon untersucht wurde, nur eben nicht direkt Values den Strategien zugeschrieben wurde-->.
