--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -27,12 +27,16 @@ This postulated temporal sequence of ER strategies influences their effectivenes
 Albeit it is meta-analytically proven that all mentioned strategies reduce subjective emotional experience, distraction as a tactic of attentional deployment and (expressive) suppression as a tactic of response modulation showed only small to medium effect sizes (distraction: _d~+~_ = 0.27; suppression: _d~+~_ = 0.27).
 In contrast, distancing as tactic of cognitive change showed the highest effectiveness with an effect size of _d~+~_ = 0.45 [@Webb2012].
 
-Moreover, it is known that ER strategies <!-- all these strategies?--> reduce physiological responses of emotions, especially emotional valence as measured via facial electromyography (EMG)[@Zaehringer2020].
-In particular, for Corrugator has been shwon...
-However, related to eklige Bilder as negative IAPS are mostly be... Levator
-(nur short term Effekte berichten wg. Überleitung)
+Psychophysiology provides further important information on the effectiveness of emotion regulation strategies.
+Compared to cardiovascular, electrodermal, and pupillometric autonomic responses, facial electromoygraphy has been reported consistently across studies to be influenced by emotion regluation with even medium effect sizes [@Zaehringer2020].
+For example, studies have shown that reappraisal of negative emotion is associated with reduced activity of the Corrugtor muscle (associated with anger, sadness, and fear) and the levator muscle (associated with disgust) with _d~-~_ = 0.32 ([@Zaehringer2020]) and _d~-~_ = XXX (XXX), respectively. 
+Similar effects have been reported for suppression (XXX) and distancing/distraction (XXX).
+
+einführen als Valenz: hier und/oder weiter unten!!!
+
 <!-- hier ist noch der Bezug zum Arousal drin gewesen, habe ich angepasst. Corrugator habe ich raus genommen, weil auch Levator untersucht wird (müssten sonst m.E. beide genannt werden.) Generell fehlt noch etwas die Einbettung, warum die beiden ausgewählt wurden. Soll ich da noch etwas ergänzen? bei Zaehringer wird der Levator überhaupt nicht genannt, die Metaanalyse bezieht sich nur auf den Corrugator. Wir hatten damals gesagt, dass viele der negativen Bilder primär auch recht eklig sind und daher der Levator passender sein könnte, weil er speuzifisch auf Ekel zu reagieren scheint, der Corrugator hingegen auf negative Bilder im Allgemeinen. Prinzipiell haben wir aber für beide die gleichen Hypothesen. Können aber auch warten, was die Reviewer sagen.--> 
 <!-- Denise: Ja das ist noch ein schwächerer Punkt in der Intro. Ich habe auch nur Paper gefunden, die EMG corrugator und levator für negative valence berichten, levator eher für Ekel, aber das muss hier kommen. Ein Satz für EMG reicht nicht aus. Wenn ihr weder auf Valence noch auf Arousal (so wie ich bei den Hypothesen noch vorgeschlagen hatte) hier gehen möchtet, dann könnte man das Konstrukt ja muscle activation o.ä. nennen und dies dann im Methodenteil über EMG corrugator und levator operationalisieren. Ich denke aber, dass die getrennte Analyse der beiden Muskelgruppen nivht gerechtfertig ist, da ihr ja keine getrennten Effekte annehmt, sondern der levator eventuel noch sinnvoll ist, da wir viele Ekelbilder haben. Habt ihr schonmal überlegt einen index über beide Aktivierungen zu bilden und dann darüber die Muskelaktivierung zu operationalisieren? Würde die Hypothesen und auch die Interpretation einfacher machen. Falls das nichts bringt, kann man explorativ immer noch die beiden EMGs getrennt analysieren und dies dann so berichten. -->
+<!-- Anne: EMG wird ganz eindeutig in der Literatur für Valenz verwendet (und EDA oder pupil dilation für Arousal), ich finde, das sollten wir hier auch so labeln. Falls das aus irgendeinenm Grund blöd erscheint, würde ich alternativ überall von physiological responses sprechen. Aber "physiological valence" passt m.E. am besten.-->
 
 Similarly to the differences in short term effectiveness, these tactics from three different strategies are also related to different medium and long-term consequences. 
 In particular, strategies that do not change the emotional content of the situation, for instance by taking a neutral perspective (i.e., distraction and suppression) are presumed to be disadvantageous in the longer term.
@@ -109,15 +113,13 @@ Second, we want to check whether the ER strategies distraction, distancing, and 
 The following hypotheses are proposed:
 <!-- es gibt bisher noch keine Begründnung/Einbettung der nachfolgenden Hypothesen. Z.B.: Warum wird Corrugator und Levator untersucht? m.E. müsste oben jeweils noch ein Satz ergänzt werden, warum genau diese Variable in der aktuellen Studie untersucht werden soll.--> <!-- Denise: ja, das hab ich auch bemerkt, ist EMG auch arousal? Dann dies erstens noch einführen und argumentieren und dann auch als physiological arousal aufführen. oder steht corrugator für arousal und levator für valence? dann auch so benennen. Außerdem subjective arousal/ subjective effort auch immer konsistent benennen. Ich schlage vor hier in den hypothesen immer von subjective arousal / effort zu sprechen, dies dann im Methodenteil über die subjective ratings / effort ratings zu operationalisieren (fehlt übrigens im Methodenteil noch.-->
 <!-- Denise: im analysis plan habt ihr auch den vergleich negative vs. neutral (active viewing) beschrieben, deshalb hab ich das hier mal als Hypothese aufgenommen-->
-
+<!-- Anne: Ich habe jetzt Corrugator und Levator mal zusammengefasst-->
 
 * H1a) Subjective arousal is lower after actively viewing neutral pictures compared to actively viewing negative pictures. 
-* H1b) Physiological responding (EMG *corrugator* activity) is lower while actively viewing neutral pictures compared to actively viewing negative pictures.
-* H1c) Physiological responding (EMG *levator* activity) is lower while actively viewing neutral pictures compared to actively viewing negative pictures. 
+* H1b) Physiological responding (EMG *corrugator* and *levator* activity) is lower while actively viewing neutral pictures compared to actively viewing negative pictures.
 
 * H2a) Subjective arousal is lower after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-* H2b) Physiological responding (EMG *corrugator* activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
-* H2c) Physiological responding (EMG *levator* activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
+* H2b) Physiological responding (EMG *corrugator* and *levator* activity) is lower while using an ER strategy (distraction, distancing, suppression) compared to active viewing.
 
 * H3a) Subjective effort is greater after using an ER strategy (distraction, distancing, suppression) compared to active viewing.
 * H3b) The majority of participants re-uses the strategy that was least effortful for them. <!-- Könnt ihr diese Hypothese statistisch testen? Finde im 'Analysis Plan' nicht, wie ihr das testen möchtet, das muss dort noch erklärt werden. Mein Vorschlag für diese Hypothese: When having free choice, participants re-use the strategy with less subjective effort.-->
@@ -126,8 +128,7 @@ Furthermore, we want to investigate whether the following variables predict indi
 
 * H4a) Subjective effort negatively predicts SVs of ER strategies.
 * H4b) Subjective arousal negatively predicts SVs of ER strategies.
-* H4c) Physiological responding (EMG *corrugator* activity) negatively predicts SVs of ER strategies.
-* H4d) Physiological responding (EMG *levator* activity) negatively predicts SVs of ER strategies.
+* H4c) Physiological responding (EMG *corrugator* and *levator* activity) negatively predicts SVs of ER strategies.
 
 * H5a) SVs decline with increasing effort, even after controlling for task performance (subjective arousal ratings), and physiological responding (EMF *corrugator* and *levator* activity).
 
