changed figure orientation

--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -186,7 +186,7 @@ Subjective arousal and effort ratings are assessed after each block using a slid
 
 # Supplementary Material {#SupplementaryMaterial}
 
-\includepdf[pages={-}, landscape=true]{Supplement/StimList_Suppl.pdf}
+\includepdf[pages={-}]{Supplement/StimList_Suppl.pdf}
 
 \newpage
 
